// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-WCkqM vWQmW sc-ikjQzJ brvubV"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-WCkqM vWQmW sc-ikjQzJ brvubV"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ePDaUN sc-WCkqM gpYPAx sc-ikjQzJ brvubV"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-WCkqM vWQmW sc-ikjQzJ brvubV"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-WCkqM mnCdn sc-ikjQzJ brvubV"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-WCkqM vWQmW sc-ikjQzJ brvubV"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-yeoIj jdeFJT"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-WCkqM vWQmW sc-ikjQzJ brvubV"
      placeholder="Type something..."
    />
  </div>
</div>
`;
